# online_cinema

./: .env.sample  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml
alembic/: env.py
alembic/versions/: 3aa6aea84a92_payment_model_implemented.py  5e0beadc5bb2_add_initial_user_groups.py  8137eaada176_sync_models_with_db_schema.py  81ff8cc67aff_initial_migration.py  be6a1c0084e2_added_comments_relationship_to_movie.py  d6dacbb3a8d0_initial_migration_with_all_tables.py
commands/: deploy.sh
src/: main.py  script_test.py
src/admin/: admin.py  admin_service.py
src/alembic/: env.py
src/alembic/versions/: 39a6416d578e_second_migration.py
src/cart/: models.py  router.py  schemas.py  service.py  services.py
src/celery_config/: __init__.py  celery_setup.py  tasks.py
src/config/: database.py  settings.py  stripe.py
src/movies/: models.py  schemas.py  service.py  services.py
src/movies/crud/: genres.py  movies.py  stars.py
src/movies/router/: genres.py  movies.py  stars.py
src/orders/: models.py  router.py  schemas.py  service.py  services.py
src/payment/: models.py  router.py  schemas.py  service.py  services.py  webhooker_router.py
src/tests/: conftest.py
src/tests/auth/: conftest.py  test_auth.py
src/tests/cart/: conftest.py  test_cart.py
src/tests/movies/: conftest.py  test_genres.py  test_movies.py  test_stars.py
src/tests/orders/: test_orders.py
src/tests/payment/: test_payment.py
src/tests/test_integration/: test_auth.py
src/tests/users/: conftest.py  test_database.py  test_users.py
src/users/: dependencies.py  models.py  permissions.py  router.py  schema.py  schemas.py  service.py  validators.py
src/users/auth/: router.py  schema.py  service.py
src/users/celery/: celery.py  tasks.py
src/users/config/: database.py  settings.py
src/users/utils/: email.py  security.py
