[project]
name = "src"
version = "1.0.0"
description = "A project for managing movies in online cinema"
authors = [
    {name = "Anastasiia Mishchuk",email = "mishchuk.anastasiia@gmail.com"},
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "aiofiles (==24.1.0)",
    "aioredis (==2.0.1)",
    "aiosmtplib (==4.0.1)",
    "aiosqlite (==0.21.0)",
    "alembic (==1.16.1)",
    "amqp (==5.3.1)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "async-timeout (==5.0.1)",
    "asyncpg (==0.30.0)",
    "babel (==2.17.0)",
    "bcrypt (==4.3.0)",
    "billiard (==4.2.1)",
    "black (==25.1.0)",
    "celery (==5.5.2)",
    "certifi (==2025.4.26)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "click (==8.1.8)",
    "click-didyoumean (==0.3.1)",
    "click-plugins (==1.1.1)",
    "click-repl (==0.3.0)",
    "coverage (==7.9.2)",
    "cryptography (==45.0.5)",
    "databases (==0.9.0)",
    "dnspython (==2.7.0)",
    "ecdsa (==0.19.1)",
    "email-validator (==2.2.0)",
    "execnet (==2.1.1)",
    "factory-boy (==3.3.3)",
    "faker (==37.4.0)",
    "fastapi (==0.115.12)",
    "fastapi-cli (==0.0.7)",
    "fastapi-sqlalchemy (==0.2.1)",
    "flake8 (==7.3.0)",
    "freezegun (==1.5.2)",
    "greenlet (==3.2.1)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httptools (==0.6.4)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "iso8601 (==2.1.0)",
    "isort (==6.0.1)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "jose (==1.0.0)",
    "kombu (==5.5.3)",
    "mako (==1.3.10)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==3.0.2)",
    "mccabe (==0.7.0)",
    "mdurl (==0.1.2)",
    "mypy (==1.16.1)",
    "mypy-extensions (==1.1.0)",
    "orjson (==3.10.18)",
    "packaging (==25.0)",
    "passlib (==1.7.4)",
    "pathspec (==0.12.1)",
    "pendulum (==3.1.0)",
    "platformdirs (==4.3.8)",
    "pluggy (==1.6.0)",
    "prompt-toolkit (==3.0.51)",
    "psycopg2-binary (==2.9.10)",
    "pyasn1 (==0.4.8)",
    "pycodestyle (==2.14.0)",
    "pycparser (==2.22)",
    "pydantic (==2.11.5)",
    "pydantic-settings (==2.9.1)",
    "pydantic-core (==2.33.2)",
    "pyflakes (==3.4.0)",
    "pygments (==2.19.1)",
    "pyjwt (==2.10.1)",
    "pypika-tortoise (==0.6.0)",
    "pytest (==8.4.1)",
    "pytest-asyncio (==1.0.0)",
    "pytest-cov (==6.2.1)",
    "pytest-mock (==3.14.1)",
    "pytest-xdist (==3.8.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.0)",
    "python-jose (==3.4.0)",
    "python-multipart (==0.0.20)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.2)",
    "redis (==6.1.0)",
    "requests (==2.32.4)",
    "rich (==14.0.0)",
    "rich-toolkit (==0.14.6)",
    "rsa (==4.9.1)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqladmin (==0.20.1)",
    "sqlalchemy (==2.0.40)",
    "starlette (==0.46.2)",
    "stripe (==12.2.0)",
    "tortoise-orm (==0.25.0)",
    "typer (==0.15.4)",
    "typing-inspection (==0.4.0)",
    "typing-extensions (==4.13.2)",
    "tzdata (==2025.2)",
    "ujson (==5.10.0)",
    "urllib3 (==2.4.0)",
    "utils (==1.0.2)",
    "uvicorn (==0.34.2)",
    "uvloop (==0.21.0)",
    "vine (==5.1.0)",
    "watchfiles (==1.0.5)",
    "wcwidth (==0.2.13)",
    "websockets (==15.0.1)",
    "wtforms (==3.1.2)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

